Minor refactor of command handlers

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,26 @@
+# General
 DISCORD_BOT_TOKEN=""
+
+# Guild Information
 DISCORD_GUILD_ID=""
+## Channels
 DISCORD_GUILD_REPORT_CATEGORY_ID=""
 DISCORD_GUILD_ARCHIVE_CHANNEL=""
 DISCORD_GUILD_LOG_CHANNEL=""
+DISCORD_GUILD_ALERT_CHANNEL=""
+DISCORD_GUILD_HISTORY_CHANNEL=""
+DISCORD_SUGGESTION_CHANNEL=""
+## Roles
+DISCORD_GUILD_MUTED_ROLE=""
+
+# Moderation
+WARN_POINTS=10
+STRIKE_POINTS=50
+MAX_POINTS=100
+
+# Feature Flags
+MESSAGE_HISTORY="true"
+NICKNAME_HISTORY="true"
+
+# Bot Information
+PRETTY_LOGS="true"
