Rework all database interactions into prisma

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -23,7 +23,7 @@ linters-settings:
     # The maximal average package complexity.
     # If it's higher than 0.0 (float) the check is enabled
     # Default: 0.0
-    package-average: 10.0
+    package-average: 15.0
 
   errcheck:
     # Report about not checking of errors in type assertions: `a := b.(MyStruct)`.
@@ -71,11 +71,11 @@ linters-settings:
     # Checks the number of lines in a function.
     # If lower than 0, disable the check.
     # Default: 60
-    lines: 100
+    lines: 150
     # Checks the number of statements in a function.
     # If lower than 0, disable the check.
     # Default: 40
-    statements: 50
+    statements: 60
     # Ignore comments when counting lines.
     # Default false
     ignore-comments: true
@@ -338,3 +338,6 @@ issues:
         - gosec
         - noctx
         - wrapcheck
+
+  exclude-files:
+    - ".*db_gen.go"
