--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,4 +32,4 @@ jobs:
             context: .
             file: ./Dockerfile
             push: true
-            tags: ghcr.io/${{ github.repository }}/wisp:${{ github.ref }}
+            tags: ghcr.io/${{ github.repository }}/wisp:${{ github.ref_name }}
