Fixes for the Dockerfile

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,4 +32,6 @@ jobs:
             context: .
             file: ./Dockerfile
             push: true
-            tags: ghcr.io/${{ github.repository }}/wisp:${{ github.ref_name }}
+            tags: |
+              ghcr.io/${{ github.repository }}/wisp:${{ github.ref_name }}
+              ghcr.io/${{ github.repository }}/wisp:latest
