Correcting .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
 # General
-DISCORD_BOT_TOKEN=""
+DISCORD_BOT_TOKEN=
 
 # Guild Information
-DISCORD_GUILD_ID=""
+DISCORD_GUILD_ID=
 ## Channels
-DISCORD_GUILD_REPORT_CATEGORY_ID=""
-DISCORD_GUILD_ARCHIVE_CHANNEL=""
-DISCORD_GUILD_LOG_CHANNEL=""
-DISCORD_GUILD_ALERT_CHANNEL=""
-DISCORD_GUILD_HISTORY_CHANNEL=""
-DISCORD_SUGGESTION_CHANNEL=""
+DISCORD_GUILD_REPORT_CATEGORY_ID=
+DISCORD_GUILD_ARCHIVE_CHANNEL=
+DISCORD_GUILD_LOG_CHANNEL=
+DISCORD_GUILD_ALERT_CHANNEL=
+DISCORD_GUILD_HISTORY_CHANNEL=
+DISCORD_SUGGESTION_CHANNEL=
 ## Roles
-DISCORD_GUILD_MUTED_ROLE=""
+DISCORD_GUILD_MUTED_ROLE=
 
 # Moderation
 WARN_POINTS=10
@@ -19,8 +19,8 @@ STRIKE_POINTS=50
 MAX_POINTS=100
 
 # Feature Flags
-MESSAGE_HISTORY="true"
-NICKNAME_HISTORY="true"
+NICKNAME_HISTORY_ENABLED=true
+NICKNAME_HISTORY_ENABLED=true
 
 # Bot Information
-PRETTY_LOGS="true"
+PRETTY_LOGS=true
