--- a/.golangci.yml
+++ b/.golangci.yml
@@ -16,6 +16,9 @@ run:
 # This file contains only configs which differ from defaults.
 # All possible options can be found here https://github.com/golangci/golangci-lint/blob/master/.golangci.reference.yml
 linters-settings:
+  goconst:
+    min-occurrences: 5
+
   cyclop:
     # The maximal code complexity to report.
     # Default: 10
